--- a/anjuannsunny_model_v1.ipynb
+++ b/anjuannsunny_model_v1.ipynb
@@ -1,5 +1,126 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ucimlrepo in c:\\users\\annsu\\anaconda3\\lib\\site-packages (0.0.7)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: pandas>=1.0.0 in c:\\users\\annsu\\anaconda3\\lib\\site-packages (from ucimlrepo) (2.0.3)\n",
+      "Requirement already satisfied: certifi>=2020.12.5 in c:\\users\\annsu\\anaconda3\\lib\\site-packages (from ucimlrepo) (2024.2.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\annsu\\appdata\\roaming\\python\\python311\\site-packages (from pandas>=1.0.0->ucimlrepo) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\annsu\\anaconda3\\lib\\site-packages (from pandas>=1.0.0->ucimlrepo) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\annsu\\anaconda3\\lib\\site-packages (from pandas>=1.0.0->ucimlrepo) (2023.3)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\annsu\\anaconda3\\lib\\site-packages (from pandas>=1.0.0->ucimlrepo) (1.24.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\annsu\\appdata\\roaming\\python\\python311\\site-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->ucimlrepo) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install ucimlrepo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from ucimlrepo import fetch_ucirepo\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fetch dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "breast_cancer_wisconsin_diagnostic = fetch_ucirepo(id=17)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load data into pandas dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = breast_cancer_wisconsin_diagnostic.data.features\n",
+    "y = breast_cancer_wisconsin_diagnostic.data.targets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explore the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Dataset Metadata:\")\n",
+    "print(breast_cancer_wisconsin_diagnostic.metadata)\n",
+    "print(\"\\nDataset Variables:\")\n",
+    "print(breast_cancer_wisconsin_diagnostic.variables)\n",
+    "print(\"\\nFeatures DataFrame:\")\n",
+    "print(X.head())\n",
+    "print(\"\\nTarget DataFrame:\")\n",
+    "print(y.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encode the target variable if necessary (assuming 'M' is malignant and 'B' is benign)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = y.replace({'M': 1, 'B': 0})"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
